--- a/frontend/src/assets/css/Carousel.css
+++ b/frontend/src/assets/css/Carousel.css
@@ -1,5 +1,6 @@
 
 .responsive-carousel {
+  margin-top: 20px;
   max-height: 88.9vh; /* Adjust this value to your preference */
   overflow: hidden;
   margin: 0 auto;
