--- a/frontend/src/assets/css/ContentRowCenter.css
+++ b/frontend/src/assets/css/ContentRowCenter.css
@@ -1,4 +1,9 @@
+.welcome-container{
+    margin-bottom: 20px;
+}
+
 .offers {
+    margin-top: 10px;
     margin-left: 10px;
     display: flex;
     gap: 10px;
